@@ -1,6 +1,7 @@
 v4.12.2 ??? April 2011
   - /KeepReference/ is now supported as a function annotation.
-  - Bug fixes.
+  - Handwritten code in class templates no longer have the types substituted in
+    lines that appear to contain C preprocessor directives.
 
 v4.12.1 22nd January 2011
   - Added support for the __getattribute__, __getattr__, __setattr__ and
